--- a/SettingsDialog.xaml
+++ b/SettingsDialog.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Widget Settings"
-        Width="400" Height="490"
+        Width="400" Height="520"
         WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize"
         Background="#FF1E1E2E"
@@ -100,6 +100,11 @@
                   Checked="Visibility_Changed" Unchecked="Visibility_Changed"/>
         <CheckBox x:Name="ChkChange24h"
                   Content="24h price change"
+                  Foreground="#CCFFFFFF" FontFamily="Segoe UI" FontSize="12"
+                  IsChecked="True" Margin="0,0,0,6"
+                  Checked="Visibility_Changed" Unchecked="Visibility_Changed"/>
+        <CheckBox x:Name="ChkSparkline"
+                  Content="Price sparkline chart"
                   Foreground="#CCFFFFFF" FontFamily="Segoe UI" FontSize="12"
                   IsChecked="True" Margin="0,0,0,6"
                   Checked="Visibility_Changed" Unchecked="Visibility_Changed"/>
