--- a/Views/ColorPickerWindow.xaml
+++ b/Views/ColorPickerWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="CryptoPrice.ColorPickerWindow"
+<Window x:Class="CryptoPrice.Views.ColorPickerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Choose Color"
