--- a/Views/Dialogs/SettingsDialog/SettingsDialog.xaml
+++ b/Views/Dialogs/SettingsDialog/SettingsDialog.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="CryptoPrice.Views.SettingsDialog"
+<Window x:Class="CryptoPrice.Views.Dialogs.SettingsDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Widget Settings"
