--- a/Views/Windows/MainWindow/MainWindow.xaml
+++ b/Views/Windows/MainWindow/MainWindow.xaml
@@ -143,7 +143,8 @@
                            FontFamily="Segoe UI"
                            FontSize="28"
                            FontWeight="SemiBold"
-                           HorizontalAlignment="Center"/>
+                           HorizontalAlignment="Center"
+                           TextAlignment="Center"/>
 
                 <!-- 24h percentage change -->
                 <TextBlock x:Name="ChangeText"
